# kanji-trainer-libs

./: .gitignore  global-validation-result.schema.json  rebuild.ps1
core/: Cargo.toml
core/src/: cache.rs  error.rs  kanji.rs  lib.rs  parser.rs  validator.rs
core/src/validation/: global.rs  mod.rs  stroke_count.rs  stroke_dtw.rs  stroke_relative_position.rs  stroke_rms.rs  utils.rs
kanji-trainer-visualizer/: dprint.json  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
kanji-trainer-visualizer/demo/: index.html  main.ts
kanji-trainer-visualizer/src/: index.ts  morph.ts  palette.ts  panel.ts  renderCanvas.ts  types.ts
python/: Cargo.toml  kanji_trainer.pyi  pyproject.toml
python/src/: lib.rs
