[package]
name = "kanji-trainer-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "kanji_trainer"
crate-type = ["cdylib"]


[dependencies]
kanji_core = { package = "kanji-trainer", path = "../core" } 
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }

[features]
abi3 = ["pyo3/abi3-py39"]