[project]
name = "kanji-trainer-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "kanji_trainer"
include = ["kanji_trainer.pyi"]

[tool.uv]
package = false


[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "dash>=3.3.0",
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "mplcursors>=0.7",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest-benchmark>=5.2.3",
    "seaborn>=0.13.2",
    "pillow>=12.0.0",
]
